fix: blockquote text color not visible when system is in dark mode and the doc is in light theme (#139)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -16,10 +16,8 @@ blockquote {
   background-color: #fffbeb;
 }
 
-@media (prefers-color-scheme: dark) {
-  blockquote {
-    background-color: #334756;
-  }
+[data-theme="dark"] blockquote {
+  background-color: #334756;
 }
 
 [data-theme="dark"] .box-tag {
